# queue-tee-pie-lab

./: CMakeLists.txt  main.cpp
src/: Kitty.cpp  Kitty.hpp  Puppy.cpp  Puppy.hpp  PygmyMarmoset.cpp  PygmyMarmoset.hpp  QueueTees.cpp  QueueTees.hpp  cutie.hpp
tests/: QueueTees_test.cpp
